@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/TermReadKey
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/TermReadKey/ChangeLog,v 1.23 2007/01/19 16:06:02 mcummings Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/TermReadKey/ChangeLog,v 1.25 2008/06/07 11:42:24 aballier Exp $
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> TermReadKey-2.30.ebuild:
+  keyword ~sparc-fbsd
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> TermReadKey-2.30.ebuild:
+  keyword ~x86-fbsd
 
   19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   -TermReadKey-2.21.ebuild, TermReadKey-2.30.ebuild:
